--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,12 +5,15 @@ image: docker.io/gitpod/workspace-full:latest
 tasks:
   - command: echo 'no prebuild'
   - name: My Task
-    init: echo 'init script' # runs during prebuild => https://www.gitpod.io/docs/configure/projects/prebuilds
+    init: echo "foo"; sleep 5; echo 'init script' # runs during prebuild => https://www.gitpod.io/docs/configure/projects/prebuilds
     command: echo 'start script'
   - init: |
       echo 'no name'
+      sleep 3
       echo 'no name'
+      sleep 3
       echo 'no name'
+      sleep 3
       echo 'no name' # super long comment here as well. Maybe this can be shortened but then on the otherhand I like it being long as it allows for testing how this gets rendered on the UI
       echo 'quite long'
       echo 'no name'
